force-app/main/default/objects/ucinn_ascendv2__Report_Data_Staging__c/ucinn_ascendv2__Report_Data_Staging__c.object-meta.xml
<CustomObject>
    <description>Used for displaying the top prospect lists in mobile lightning component</description>
    <label>Report Data Staging</label>
    <nameField>
        <label>Report Data Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Data Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>