force-app/main/default/objects/ucinn_ascendv2__Report_Data_Staging__c/fields/ucinn_ascendv2__Data_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Data_ID__c</fullName>
    <externalId>true</externalId>
    <label>Data ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>