force-app/main/default/objects/ucinn_ascendv2__Report_Data_Staging__c/fields/ucinn_ascendv2__Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Donor_ID__c</fullName>
    <label>Donor ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>