force-app/main/default/objects/ucinn_ascendv2__Report_Data_Staging__c/fields/ucinn_ascendv2__PRM_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__PRM_Name__c</fullName>
    <label>PRM Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>