force-app/main/default/objects/ucinn_ascendv2__Report_Data_Staging__c/fields/ucinn_ascendv2__Prospect_List__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Prospect_List__c</fullName>
    <description>The name indicates which prospect list the item belongs to</description>
    <label>Prospect List</label>
    <length>30</length>
    <type>Text</type>
</CustomField>