force-app/main/default/objects/ucinn_ascendv2__Report_Data_Staging__c/fields/ucinn_ascendv2__Sort_Key__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Sort_Key__c</fullName>
    <label>Sort Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>