force-app/main/default/objects/ucinn_ascendv2__Report_Data_Staging__c/fields/ucinn_ascendv2__Source_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source_Record_ID__c</fullName>
    <label>Source Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>