force-app/main/default/objects/ucinn_ascendv2__Report_Data_Staging__c/fields/ucinn_ascendv2__Source_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source_Record_Type__c</fullName>
    <label>Source Record Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>