force-app/main/default/objects/ucinn_ascendv2__Report_Data_Staging__c/fields/ucinn_ascendv2__Stage_of_Readiness__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Stage_of_Readiness__c</fullName>
    <label>Stage of Readiness</label>
    <length>50</length>
    <type>Text</type>
</CustomField>