force-app/main/default/objects/ucinn_ascendv2__Report_Data_Staging__c/fields/ucinn_ascendv2__Sub_Prospect_List__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Sub_Prospect_List__c</fullName>
    <description>Indicate whether there&apos;s a sub prospect list that the item belongs to.</description>
    <label>Sub Prospect List</label>
    <length>30</length>
    <type>Text</type>
</CustomField>