force-app/main/default/objects/ucinn_ascendv2__Report_Data_Staging__c/fields/ucinn_ascendv2__Top_25_Prospect__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Top_25_Prospect__c</fullName>
    <label>Top 25 Prospect</label>
    <length>50</length>
    <type>Text</type>
</CustomField>