force-app/main/default/objects/ucinn_ascendv2__Report_Data_Staging__c/fields/ucinn_ascendv2__Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Type__c</fullName>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>