force-app/main/default/objects/ucinn_ascendv2__Report_Data_Staging__c/fields/ucinn_ascendv2__Update_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Update_Date__c</fullName>
    <label>Update Date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>